# evolution_game

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Coordinate.cpp  Coordinate.h  Field.cpp  Field.h  Food.cpp  Section.cpp  Section.h  enums.h  main.cpp
include/evolutiong_game/: Cell.cpp  Cell.h  Coordinate.cpp  Field.cpp  Field.h  Food.h  Section.cpp  Section.h  enums.cpp  enums.h
include/evolutiong_game/Cell/: Cell.cpp  Cell.h  Coordinate.cpp  Coordinate.h  Genes.cpp  Genes.h
src/: main.cpp
src/QT/: mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: CMakeLists.txt  TestGenes.cpp  TestGenes.h  main.cpp
